update Personal Page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Jorge A. Diaz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="bootstrap.min.css"
+    />
+    <!--script src="main.js"></script-->
   </head>
-  <body>
-    Hello Wordl!
+  <body class="container pt-4">
+    <div class="row">
+      <div class="col-lg-3">
+        <img src="image.jpeg" width="250px" />
+        <!-- Contact Description -->
+        <div class="mt-4">
+          <h4>Contact Information</h4>          
+          <ul>
+            <li>Email: jorge.diazma@usm.cl</li>
+            <li>ResearchGate <a href="https://www.researchgate.net/profile/Jorge-Diaz-Matte-2">profile</a> </li>
+            <li>LinkedIn <a href="https://www.linkedin.com/in/jadiazcl/">profile</a> </li>
+          </ul>        
+        </div> 
+        <!-- Favorite Retro Games Description -->
+        <div class="mt-4">
+          <h4>Favorite Retro Games</h4>          
+          <ul>            
+            <li><a href="https://store.steampowered.com/app/2280/DOOM_1993">DOOM I & II</a> </li>
+            <li><a href=" https://starcraft.blizzard.com/es-es/">StarCraft I</a> </li>
+            <li><a href="https://www.gog.com/game/warcraft_bundle?blzcmp=blizzard-news&r=true">WarCraft II</a> </li>
+           
+          </ul>        
+        </div>        
+      </div>
+      <div class="col-lg-9">
+        <!-- Personal Description -->
+        <div>
+          <h1>Jorge Ariel Díaz Matte</h1>
+          <h3>PhD Student in Computer Science</h3>
+          <h4>MSc. Computer Science</h4>
+          <p>
+            Part-time Professor, Department of Informatics <br />
+            Universidad Técnica Federico Santa María, Santiago, Chile
+          </p>
+        </div>
+        <!-- Research Description -->
+        <div>
+          <h4>Research</h4>
+          <p>
+            The primary focus of my research is the design of data structures and
+            algorithms for computational geometric problems, in particular I am
+            studying:
+            <ul>
+              <li>Optimizations in quadtree/octree mesh generation</li>
+              <li>Issues related to Convex-Hull</li>
+            </ul>
+          </p>
+        </div>        
+        <!-- Publications Description -->
+        <div>
+          <h4>Publications</h4>         
+          
+          <ul>            
+            <li>My Scopus <a href="https://www.scopus.com/authid/detail.uri?authorId=58754702500">entry</a></li>
+            <li>My google scholar <a href="https://scholar.google.com/citations?user=WLgDej4AAAAJ">entry</a></li>            
+          </ul>          
+        </div>
+        <!-- Teaching Description -->
+        <div>
+          <h4>
+            Classes I instruct
+          </h4>
+          <p>
+            The undergraduate courses I teach are as follows:
+            <ul>
+              <li>INF-152 Discrete Structures</li>
+              <li>INF-253 Programming Languages</li>
+              <li>INF-256 Computer Networks</li>
+              <li>INF-343 Distributed Systems</li>
+            </ul>
+          </p>          
+        </div>
+      </div>
+    </div>
   </body>
 </html>
