--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <div class="mobile-description text-center">
           <h1>Jorge Ariel Díaz Matte</h1>
           <h3>PhD Student in Computer Science</h3>
-          <h4>MSc. Computer Science</h4>
+          <h5>MSc. Computer Science, Universidad Técnica Federico Santa María</h5>
+          <h5>Computer Science Engineer, Universidad Técnica Federico Santa María</h5>
           <p>
             Part-time Professor, Department of Informatics <br />
             Universidad Técnica Federico Santa María, Santiago, Chile
@@ -65,7 +66,8 @@
         <div class="desktop-description">
           <h1>Jorge Ariel Díaz Matte</h1>
           <h3>PhD Student in Computer Science</h3>
-          <h4>MSc. Computer Science</h4>
+          <h5>MSc. Computer Science, Universidad Técnica Federico Santa María</h5>
+          <h5>Computer Science Engineer, Universidad Técnica Federico Santa María</h5>
           <p>
             Part-time Professor, Department of Informatics <br />
             Universidad Técnica Federico Santa María, Santiago, Chile
@@ -108,6 +110,11 @@
             </ul>
           </p>          
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 col-md-6 col-sm-12 px-4 mb-3">
+        <a href="http://s11.flagcounter.com/more/yd"><img src="https://s11.flagcounter.com/count2/yd/bg_080808/txt_15DE0D/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
       </div>
     </div>
   </body>
