--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
     <div class="row">
       <div class="col-lg-12 col-md-6 col-sm-12 px-4 mb-3">
-        <a href="http://s11.flagcounter.com/more/yd"><img src="https://s11.flagcounter.com/count2/yd/bg_080808/txt_15DE0D/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+       <a href="https://s11.flagcounter.com/more/yd"><img src="https://s11.flagcounter.com/count2/yd/bg_050505/txt_0EC914/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Free counters!" border="0"></a>
       </div>
     </div>
   </body>
