add info projects

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </p>
         </div>
         <!-- Contact Description -->
-        <div class="mt-4  text-justify">
+        <div class="desktop-description mt-4  text-justify">
           <h4>Contact Information</h4>          
           <ul>
             <li>Email: jorge.diazma@usm.cl</li>
@@ -51,7 +51,7 @@
           </ul>        
         </div> 
         <!-- Favorite Retro Games Description -->
-        <div class="mt-4">
+        <div class="desktop-description mt-4">
           <h4>My Top Retro Games</h4>          
           <ul>            
             <li><a href="https://store.steampowered.com/app/2280/DOOM_1993">DOOM I & II</a> </li>
@@ -59,7 +59,10 @@
             <li><a href="https://www.gog.com/game/warcraft_bundle?blzcmp=blizzard-news&r=true">WarCraft II</a> </li>
            
           </ul>        
-        </div>        
+        </div>   
+        <div class="desktop-description mt-4">          
+          <a href="https://s11.flagcounter.com/more/yd"><img src="https://s11.flagcounter.com/count2/yd/bg_050505/txt_0EC914/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_1/pageviews_1/flags_0/percent_0" alt="Free counters!" border="0"></a>           
+        </div>     
       </div>
       <div class="col-lg-9 col-md-6 px-4">
         <!-- Personal Description -->
@@ -95,6 +98,14 @@
             <li>My google scholar <a href="https://scholar.google.com/citations?user=WLgDej4AAAAJ">entry</a></li>            
           </ul>          
         </div>
+        <!-- Projects Description -->
+        <div>
+          <h4>Projects</h4>                   
+          <ul>            
+            <li>Master Student 2022-2023, Nancy Hitschfeld FONDECYT Iniciación 1211484, <em>"Polygon and polyhedron meshing algorithms"</em></li>
+            <li>Undergraduate Student 2020-2021, Erika Rosas FONDECYT Iniciación 11181028, <em>"DTN experimentation in disaster scenarios in simulator"</em></li>            
+          </ul>          
+        </div>
         <!-- Teaching Description -->
         <div>
           <h4>
@@ -109,12 +120,30 @@
               <li>INF-343 Distributed Systems</li>
             </ul>
           </p>          
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12 col-md-6 col-sm-12 px-4 mb-3">
-       <a href="https://s11.flagcounter.com/more/yd"><img src="https://s11.flagcounter.com/count2/yd/bg_050505/txt_0EC914/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Free counters!" border="0"></a>
+        </div>        
+        <!-- Contact Description -->
+        <div class="mobile-description mt-4  text-justify">
+          <h4>Contact Information</h4>          
+          <ul>
+            <li>Email: jorge.diazma@usm.cl</li>
+            <li>Github: <a href="https://github.com/jadiazcl">jadiazcl</a></li>
+            <li>ResearchGate <a href="https://www.researchgate.net/profile/Jorge-Diaz-Matte-2">profile</a> </li>
+            <li>LinkedIn <a href="https://www.linkedin.com/in/jadiazcl/">profile</a> </li>
+          </ul>        
+        </div> 
+        <!-- Favorite Retro Games Description -->
+        <div class="mobile-description mt-4">
+          <h4>My Top Retro Games</h4>          
+          <ul>            
+            <li><a href="https://store.steampowered.com/app/2280/DOOM_1993">DOOM I & II</a> </li>
+            <li><a href=" https://starcraft.blizzard.com/es-es/">StarCraft I</a> </li>
+            <li><a href="https://www.gog.com/game/warcraft_bundle?blzcmp=blizzard-news&r=true">WarCraft II</a> </li>
+           
+          </ul>        
+        </div>   
+        <div class="mobile-description my-4 pl-1 ">          
+          <a href="https://s11.flagcounter.com/more/yd"><img src="https://s11.flagcounter.com/count2/yd/bg_050505/txt_0EC914/border_CCCCCC/columns_2/maxflags_10/viewers_0/labels_1/pageviews_1/flags_0/percent_0" alt="Free counters!" border="0"></a>           
+        </div>   
       </div>
     </div>
   </body>
