--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Personal Description -->
         <div class="mobile-description text-center">
           <h1>Jorge Ariel Díaz Matte</h1>
-          <h3>PhD Student in Computer Science, Universidad de Chile</h3>
+          <h3>PhD Student in Computing, Universidad de Chile</h3>
           <h5>MSc. Computer Science, Universidad Técnica Federico Santa María</h5>
           <h5>Computer Science Engineer, Universidad Técnica Federico Santa María</h5>
           <p>
@@ -68,7 +68,7 @@
         <!-- Personal Description -->
         <div class="desktop-description">
           <h1>Jorge Ariel Díaz Matte</h1>
-          <h3>PhD Student in Computer Science, Universidad de Chile</h3>
+          <h3>PhD Student in Computing, Universidad de Chile</h3>
           <h5>MSc. Computer Science, Universidad Técnica Federico Santa María</h5>
           <h5>Computer Science Engineer, Universidad Técnica Federico Santa María</h5>
           <p>
@@ -85,7 +85,7 @@
             studying:
             <ul>
               <li>Optimizations in quadtree/octree mesh generation</li>
-              <li>Issues related to Convex-Hull</li>
+              <li>Data Structures for Computational Geometry</li>
             </ul>
           </p>
         </div>        
