--- a/index.html
+++ b/index.html
@@ -9,26 +9,25 @@
       rel="stylesheet"
       type="text/css"
       media="screen"
-      href="bootstrap.min.css"
+      href="assets/css/bootstrap.min.css"
     />
+    <link
+    rel="stylesheet"
+    type="text/css"
+    media="screen"
+    href="assets/css/styles.css"
+  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <style>
-      .mobile-description{
-        @media (width >= 768px) {
-            display: none
-        }
-      }
-      .desktop-description{
-        @media (width < 768px) {
-            display: none
-        }
-      }
+
     </style>
     <!--script src="main.js"></script-->
   </head>
   <body class="container pt-4">
-    <div class="row">
-      <div class="col-lg-3 col-md-6  px-4">
-        <center><img src="image.jpeg" width="250px" /></center>
+    <div class="row">      
+      <div class="col-lg-3 col-md-6 px-4">
+        <center><img src="assets/images/image.jpeg" class="img-profile" /></center>
         <!-- Personal Description -->
         <div class="mobile-description text-center">
           <h1>Jorge Ariel Díaz Matte</h1>
@@ -42,13 +41,25 @@
         </div>
         <!-- Contact Description -->
         <div class="desktop-description mt-4  text-justify">
-          <h4>Contact Information</h4>          
-          <ul>
-            <li>Email: jorge.diazma@usm.cl</li>
-            <li>Github: <a href="https://github.com/jadiazcl">jadiazcl</a></li>
-            <li>ResearchGate <a href="https://www.researchgate.net/profile/Jorge-Diaz-Matte-2">profile</a> </li>
-            <li>LinkedIn <a href="https://www.linkedin.com/in/jadiazcl/">profile</a> </li>
-          </ul>        
+
+          <h4>Contact Information</h4>         
+          <div class="row mx-auto">
+            <div class="col-md-2 px-0 mx-auto">
+              <a href="mailto:jorge.diaz.m@ug.uchile.cl"><i class="fa fa-envelope-square fa-2x"></i></a>
+            </div>
+            <div class="col-md-2 px-0 mx-auto">
+              <a href="https://github.com/jadiazcl"><i class="fa fa-github-square fa-2x"></i></a>
+            </div>
+            <div class="col-md-2 px-0 mx-auto">
+              <a href="https://www.linkedin.com/in/jadiazcl/"><i class="fa fa-linkedin-square fa-2x"></i></a> 
+            </div>
+            <div class="col-md-2 px-0 mx-auto">
+              <a href="https://github.com/jadiazcl"><i class="ai ai-google-scholar-square ai-2x"></i></a>
+            </div>
+            <div class="col-md-2 px-0 mx-auto">
+              <a href="https://www.researchgate.net/profile/Jorge-Diaz-Matte-2"><i class="ai ai-researchgate-square ai-2x"></i></a> 
+            </div>
+          </div>             
         </div> 
         <!-- Favorite Retro Games Description -->
         <div class="desktop-description mt-4">
