--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <a href="https://www.linkedin.com/in/jadiazcl/"><i class="fa fa-linkedin-square fa-2x"></i></a> 
             </div>
             <div class="col-md-2 px-0 mx-auto">
-              <a href="https://github.com/jadiazcl"><i class="ai ai-google-scholar-square ai-2x"></i></a>
+              <a href="https://scholar.google.com/citations?user=WLgDej4AAAAJ"><i class="ai ai-google-scholar-square ai-2x"></i></a>
             </div>
             <div class="col-md-2 px-0 mx-auto">
               <a href="https://www.researchgate.net/profile/Jorge-Diaz-Matte-2"><i class="ai ai-researchgate-square ai-2x"></i></a> 
