--- a/index.html
+++ b/index.html
@@ -135,12 +135,23 @@
         <!-- Contact Description -->
         <div class="mobile-description mt-4  text-justify">
           <h4>Contact Information</h4>          
-          <ul>
-            <li>Email: jorge.diazma@usm.cl</li>
-            <li>Github: <a href="https://github.com/jadiazcl">jadiazcl</a></li>
-            <li>ResearchGate <a href="https://www.researchgate.net/profile/Jorge-Diaz-Matte-2">profile</a> </li>
-            <li>LinkedIn <a href="https://www.linkedin.com/in/jadiazcl/">profile</a> </li>
-          </ul>        
+          <div class="row mx-auto">
+            <div class="col-2 px-0 mx-auto">
+              <a href="mailto:jorge.diaz.m@ug.uchile.cl"><i class="fa fa-envelope-square fa-3x"></i></a>
+            </div>
+            <div class="col-2 px-0 mx-auto">
+              <a href="https://github.com/jadiazcl"><i class="fa fa-github-square fa-3x"></i></a>
+            </div>
+            <div class="col-2 px-0 mx-auto">
+              <a href="https://www.linkedin.com/in/jadiazcl/"><i class="fa fa-linkedin-square fa-3x"></i></a> 
+            </div>
+            <div class="col-2 px-0 mx-auto">
+              <a href="https://scholar.google.com/citations?user=WLgDej4AAAAJ"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+            </div>
+            <div class="col-2 px-0 mx-auto">
+              <a href="https://www.researchgate.net/profile/Jorge-Diaz-Matte-2"><i class="ai ai-researchgate-square ai-3x"></i></a> 
+            </div>
+          </div>         
         </div> 
         <!-- Favorite Retro Games Description -->
         <div class="mobile-description mt-4">
