--- a/index.html
+++ b/index.html
@@ -113,8 +113,9 @@
         <div>
           <h4>Projects</h4>                   
           <ul>            
-            <li>Master Student 2022-2023, Nancy Hitschfeld FONDECYT Regular 1211484, <em>"Polygon and polyhedron meshing algorithms"</em></li>
-            <li>Undergraduate Student 2020-2021, Erika Rosas FONDECYT Iniciación 11181028, <em>"DTN experimentation in disaster scenarios in simulator"</em></li>            
+            <li>PhD Student (2024-Present), Nancy Hitschfeld FONDECYT Regular 1241596, <em>"Polyhedral Mesh Generation"</em></li>
+            <li>Master Student (2022-2023), Nancy Hitschfeld FONDECYT Regular 1211484, <em>"Polygon and polyhedron meshing algorithms"</em></li>
+            <li>Undergraduate Student (2020-2021), Erika Rosas FONDECYT Iniciación 11181028, <em>"DTN experimentation in disaster scenarios in simulator"</em></li>            
           </ul>          
         </div>
         <!-- Teaching Description -->
