update new section

--- a/teaching.html
+++ b/teaching.html
@@ -99,39 +99,48 @@
               </li>
             </ul>
           </div>
-        </nav>
+        </nav>              
+        <!-- Teaching Description -->
         <div>
-          <h4>Research</h4>
+          <h4>
+            Teaching
+          </h4>
           <p>
-            The primary focus of my research is the design of data structures and
-            algorithms for computational geometric problems, in particular I am
-            studying:
+            The undergraduate courses I teach are as follows:
             <ul>
-              <li>Optimizations in quadtree/octree mesh generation</li>
-              <li>Data Structures for Computational Geometry</li>
+              <li>INF-152 Discrete Structures</li>
+              <li>INF-253 Programming Languages</li>
+              <li>INF-256 Computer Networks</li>
+              <li>INF-343 Distributed Systems</li>
             </ul>
-          </p>
-        </div>        
-        <!-- Publications Description -->
-        <div>
-          <h4>Publications</h4>         
-          
-          <ul>            
-            <li> <a href="https://cris.usm.cl/entities/tesis/1245c5e4-3188-425b-8859-c8868173d3a6">Master's Thesis </a></li>
-            <li> <a href="https://repositorio.usm.cl/entities/tesis/6ebc6a1a-dcd1-4674-84bb-901294ebbabd">Undergraduate Thesis</a></li>
-            <li>My Scopus <a href="https://www.scopus.com/authid/detail.uri?authorId=58754702500">entry</a></li>
-            <li>My google scholar <a href="https://scholar.google.com/citations?user=WLgDej4AAAAJ">entry</a></li>            
-          </ul>          
-        </div>
-        <!-- Projects Description -->
-        <div>
-          <h4>Projects</h4>                   
-          <ul>            
-            <li>PhD Student (2024-Present), Nancy Hitschfeld FONDECYT Regular 1241596, <em>"Polyhedral Mesh Generation"</em></li>
-            <li>Master Student (2022-2023), Nancy Hitschfeld FONDECYT Regular 1211484, <em>"Polygon and polyhedron meshing algorithms"</em></li>
-            <li>Undergraduate Student (2020-2021), Erika Rosas FONDECYT Iniciación 11181028, <em>"DTN experimentation in disaster scenarios in simulator"</em></li>            
-          </ul>          
+          </p>          
         </div>    
+        <div>
+          <h4>
+            Thesis Supervision
+          </h4>
+          <p>
+            Undergraduate students:
+            <ul>
+                <li class="py-1">
+                    <div>
+                        <a href="#">Diseño e implementación en un sistema de comunicación para flotas, enfocado a la extensión de la cobertura en áreas de señal deficiente</a>
+                    </div>
+                    <div>
+                    <strong>E. Pérez, </strong> Universidad Técnica Federico Santa María, 2025.  
+                    </div>
+                </li>
+                <li class="py-1">
+                    <div>
+                        <a href="https://repositorio.usm.cl/entities/tesis/0c559849-0560-41a3-b90f-dbb23eec632c" >Diseño de una metodología de comunicación P2P para dispositivos en redes NAT</a>
+                    </div>
+                    <div>
+                    <strong>D. Rojas, </strong> Universidad Técnica Federico Santa María, 2024.  
+                    </div>
+                </li>
+            </ul>
+          </p>          
+        </div>      
         <!-- Contact Description -->
         <div class="mobile-description mt-4  text-justify">
           <h4>Contact Information</h4>          
