--- a/teaching.html
+++ b/teaching.html
@@ -35,7 +35,7 @@
           <h5>MSc. Computer Science, Universidad Técnica Federico Santa María</h5>
           <h5>Computer Science Engineer, Universidad Técnica Federico Santa María</h5>
           <p>
-            Part-time Professor, Department of Informatics <br />
+            Instructor, Department of Informatics <br />
             Universidad Técnica Federico Santa María, Santiago, Chile
           </p>
         </div>
@@ -83,7 +83,7 @@
           <h5>MSc. Computer Science, Universidad Técnica Federico Santa María</h5>
           <h5>Computer Science Engineer, Universidad Técnica Federico Santa María</h5>
           <p>
-            Part-time Professor, Department of Informatics <br />
+            Instructor, Department of Informatics <br />
             Universidad Técnica Federico Santa María, Santiago, Chile
           </p>
         </div>
