--- a/teaching.html
+++ b/teaching.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Jorge A. Diaz Matte</title>
+    <title>➳ Jorge Diaz Matte</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -30,7 +30,7 @@
         <center><img src="assets/images/image.jpeg" class="img-profile" /></center>
         <!-- Personal Description -->
         <div class="mobile-description text-center">
-          <h1>Jorge Ariel Díaz Matte</h1>
+          <h1>Jorge Díaz Matte</h1>
           <h3>PhD Student in Computing, Universidad de Chile</h3>
           <h5>MSc. Computer Science, Universidad Técnica Federico Santa María</h5>
           <h5>Computer Science Engineer, Universidad Técnica Federico Santa María</h5>
@@ -78,7 +78,7 @@
       <div class="col-lg-9 col-md-6 px-4">
         <!-- Personal Description -->
         <div class="desktop-description">
-          <h1>Jorge Ariel Díaz Matte</h1>
+          <h1>Jorge Díaz Matte</h1>
           <h3>PhD Student in Computing, Universidad de Chile</h3>
           <h5>MSc. Computer Science, Universidad Técnica Federico Santa María</h5>
           <h5>Computer Science Engineer, Universidad Técnica Federico Santa María</h5>
