--- a/teaching.html
+++ b/teaching.html
@@ -45,7 +45,7 @@
           <h4>Contact Information</h4>         
           <div class="row mx-auto">
             <div class="col-md-2 px-0 mx-auto">
-              <a href="mailto:jorge.diaz.m@ug.uchile.cl"><i class="fa fa-envelope-square fa-2x"></i></a>
+              <a href="mailto:jdiaz@dcc.uchile.cl"><i class="fa fa-envelope-square fa-2x"></i></a>
             </div>
             <div class="col-md-2 px-0 mx-auto">
               <a href="https://github.com/jadiazcl"><i class="fa fa-github-square fa-2x"></i></a>
@@ -121,10 +121,26 @@
           </h4>
           <p>
             Undergraduate students:
-            <ul>
+            <ul style="font-size: 0.95rem;">
                 <li class="py-1">
                     <div>
-                        <a href="#">Diseño e implementación en un sistema de comunicación para flotas, enfocado a la extensión de la cobertura en áreas de señal deficiente</a>
+                        <a href="#">Comparación Cuantitativa de Desempeño de la Estructura de Datos Aizawa/Tanka en Algoritmo Generador de Mallas tipo Quadtree</a>
+                    </div>
+                    <div>
+                    <strong>D. Pumarino, </strong> Universidad Técnica Federico Santa María, 2025.  
+                    </div>
+                </li>
+                <li class="py-1">
+                    <div>
+                        <a href="#">Cálculo y Guardado de Información Relevante de una Malla Octree</a>
+                    </div>
+                    <div>
+                    <strong>J. Contreras, </strong> Universidad Técnica Federico Santa María, 2025.  
+                    </div>
+                </li>
+                <li class="py-1">
+                    <div>
+                        <a href="#">Diseño e implementación en un Sistema de Comunicación para Flotas, Enfocado a la Extensión de la Cobertura en Áreas de Señal Deficiente</a>
                     </div>
                     <div>
                     <strong>E. Pérez, </strong> Universidad Técnica Federico Santa María, 2025.  
@@ -132,7 +148,7 @@
                 </li>
                 <li class="py-1">
                     <div>
-                        <a href="https://repositorio.usm.cl/entities/tesis/0c559849-0560-41a3-b90f-dbb23eec632c" >Diseño de una metodología de comunicación P2P para dispositivos en redes NAT</a>
+                        <a href="https://repositorio.usm.cl/entities/tesis/0c559849-0560-41a3-b90f-dbb23eec632c" >Diseño de una Metodología de Comunicación P2P para Dispositivos en Redes NAT</a>
                     </div>
                     <div>
                     <strong>D. Rojas, </strong> Universidad Técnica Federico Santa María, 2024.  
@@ -146,7 +162,7 @@
           <h4>Contact Information</h4>          
           <div class="row mx-auto">
             <div class="col-2 px-0 mx-auto">
-              <a href="mailto:jorge.diaz.m@ug.uchile.cl"><i class="fa fa-envelope-square fa-3x"></i></a>
+              <a href="mailto:jdiaz@dcc.uchile.cl"><i class="fa fa-envelope-square fa-3x"></i></a>
             </div>
             <div class="col-2 px-0 mx-auto">
               <a href="https://github.com/jadiazcl"><i class="fa fa-github-square fa-3x"></i></a>
