--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h4>Contact Information</h4>         
           <div class="row mx-auto">
             <div class="col-md-2 px-0 mx-auto">
-              <a href="mailto:jorge.diaz.m@ug.uchile.cl"><i class="fa fa-envelope-square fa-2x"></i></a>
+              <a href="mailto:jdiaz@dcc.uchile.cl"><i class="fa fa-envelope-square fa-2x"></i></a>
             </div>
             <div class="col-md-2 px-0 mx-auto">
               <a href="https://github.com/jadiazcl"><i class="fa fa-github-square fa-2x"></i></a>
@@ -137,7 +137,7 @@
           <h4>Contact Information</h4>          
           <div class="row mx-auto">
             <div class="col-2 px-0 mx-auto">
-              <a href="mailto:jorge.diaz.m@ug.uchile.cl"><i class="fa fa-envelope-square fa-3x"></i></a>
+              <a href="mailto:jdiaz@dcc.uchile.cl"><i class="fa fa-envelope-square fa-3x"></i></a>
             </div>
             <div class="col-2 px-0 mx-auto">
               <a href="https://github.com/jadiazcl"><i class="fa fa-github-square fa-3x"></i></a>
