--- a/teaching.html
+++ b/teaching.html
@@ -132,7 +132,7 @@
                 </li>
                 <li class="py-1">
                     <div>
-                        <a href="#">Cálculo y Guardado de Información Relevante de una Malla Octree</a>
+                        <a href="https://repositorio.usm.cl/entities/tesis/a317e975-73e6-4343-a3f7-eb5c6b1d1f43">Cálculo y Guardado de Información Relevante de una Malla Octree</a>
                     </div>
                     <div>
                     <strong>J. Contreras, </strong> Universidad Técnica Federico Santa María, 2025.  
