--- a/tallergpu.html
+++ b/tallergpu.html
@@ -106,8 +106,8 @@
            A continuación se encuentran disponibles los recursos para las clases:
            <h5>Clase 1</h5>
             <ul>
-              <li><a href="https://github.com/jadiazcl">Programa Taller</a></li>
-              <li><a href="https://github.com/jadiazcl">Presentación 1 (Nancy Hitschfeld)</a></li>
+              <li><a href="https://jadiazcl.github.io/GPU/Programa%20Taller%20de%20GPU.pdf">Programa Taller</a></li>
+              <li><a href="https://jadiazcl.github.io/GPU/clase_introductoria.pdf">Presentación 1 (Nancy Hitschfeld)</a></li>
             </ul>
           </p>
         </div>        
