--- a/tallergpu.html
+++ b/tallergpu.html
@@ -109,6 +109,11 @@
               <li><a href="https://jadiazcl.github.io/GPU/Programa%20Taller%20de%20GPU.pdf">Programa Taller</a></li>
               <li><a href="https://jadiazcl.github.io/GPU/clase_introductoria.pdf">Presentación 1 (Nancy Hitschfeld)</a></li>
             </ul>
+            <h5>Clase 2</h5>
+            <ul>              
+              <li><a href="https://jadiazcl.github.io/GPU/clase_2.pdf">Presentación 2 (Nancy Hitschfeld)</a></li>
+              <li><a href="https://jadiazcl.github.io/GPU/ccuda_basic.pdf">Presentación NVIDIA</a></li>
+            </ul>
           </p>
         </div>        
          
