--- a/tallergpu.html
+++ b/tallergpu.html
@@ -112,7 +112,8 @@
             <h5>Clase 2</h5>
             <ul>              
               <li><a href="https://jadiazcl.github.io/GPU/clase_2.pdf">Presentación 2 (Nancy Hitschfeld)</a></li>
-              <li><a href="https://jadiazcl.github.io/GPU/ccuda_basic.pdf">Presentación NVIDIA</a></li>
+              <li><a href="https://jadiazcl.github.io/GPU/cuda_basic.pdf">Presentación NVIDIA</a></li>
+              <li><a href="https://jadiazcl.github.io/GPU/template.cu">Template Cuda</a></li>
             </ul>
           </p>
         </div>        
