--- a/tallergpu.html
+++ b/tallergpu.html
@@ -115,6 +115,11 @@
               <li><a href="https://jadiazcl.github.io/GPU/cuda_basic.pdf">Presentación NVIDIA</a></li>
               <li><a href="https://jadiazcl.github.io/GPU/template.cu">Template Cuda</a></li>
             </ul>
+            <h5>Clase 3</h5>
+            <li><a href="https://jadiazcl.github.io/GPU/Lectura_1_hasta_pagina_308_-1.pdf">Lectura 3</a></li>
+            <h5>Clase 4</h5>
+            <li><a href="https://jadiazcl.github.io/GPU/MattsonTutorialSC14-2016.pdf">Presentación OPENCL</a></li>
+            <li><a href="https://jadiazcl.github.io/GPU/vectorAddOpencl-c%2B%2B.zip">Código OPENCL</a></li>
           </p>
         </div>        
          
