--- a/tallergpu.html
+++ b/tallergpu.html
@@ -122,7 +122,11 @@
             <h5>Clase 4</h5>
             <ul>    
             <li><a href="https://jadiazcl.github.io/GPU/MattsonTutorialSC14-2016.pdf">Presentación OPENCL</a></li>
-            <li><a href="https://jadiazcl.github.io/GPU/vectorAddOpencl-c%2B%2B.zip">Código OPENCL</a></li>
+            <li><a href="https://jadiazcl.github.io/GPU/vectorAddOpencl-c%2B%2B.zip">Código OpenCL</a></li>
+            </ul>
+            <h5>Clase 6</h5>
+            <ul>    
+            <li><a href="https://jadiazcl.github.io/GPU/OpenGL_y_Shaders_repaso_.pdf">Presentación OpenGL</a></li>            
             </ul>
           </p>
         </div>        
