Add new OpenGL presentation link to tallergpu.html

--- a/tallergpu.html
+++ b/tallergpu.html
@@ -126,7 +126,8 @@
             </ul>
             <h5>Clase 6</h5>
             <ul>    
-            <li><a href="https://jadiazcl.github.io/GPU/OpenGL_y_Shaders_repaso_.pdf">Presentación OpenGL</a></li>            
+            <li><a href="https://jadiazcl.github.io/GPU/OpenGL_y_Shaders_repaso_.pdf">Presentación OpenGL</a></li> 
+            <li><a href="https://jadiazcl.github.io/GPU/Introduccion-a-shaders.pdf">Presentación OpenGL 2</a></li> 
             </ul>
           </p>
         </div>        
