Add Clase 7 resources to tallergpu.html
Added resources for Clase 7 including presentations and example code.

--- a/tallergpu.html
+++ b/tallergpu.html
@@ -130,6 +130,11 @@
             <li><a href="https://jadiazcl.github.io/GPU/Introduccion-a-shaders.pdf">Presentación OpenGL 2</a></li> 
             <li><a href="https://jadiazcl.github.io/GPU/example.zip">Código ejemplo</a></li>             
             </ul>
+            <h5>Clase 7</h5>
+            <ul>    
+            <li><a href="https://jadiazcl.github.io/GPU/S0267A-GTC2012-Mixing-Graphics-Compute.pdf">Mixing Graphics and Compute with GPU</a></li> 
+            <li><a href="https://jadiazcl.github.io/GPU/ejemploInterCudaOpenGL.zip">Código ejemplo Inter CUDA-OpenGL</a></li>             
+            </ul>
           </p>
         </div>        
          
